# parse_apple_health_data

./: LICENSE  README.md  pyproject.toml  setup.cfg  test_notebook.ipynb
.github/workflows/: publish.yml
src/parse_apple_health_data/: __init__.py  parser.py  utils.py
tests/: test_parser.py
