# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parse_apple_health_data"
version = "1.0.0"
authors = [
    { name="Lauri Soome", email="las623@lehigh.edu" },
]
description = "A Python package for parsing Apple Health Export data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/soomelauri/parse_apple_health_data"
"Bug Tracker" = "https://github.com/soomelauri/parse_apple_health_data/issues"
