# setup.cfg
[metadata]
name = parse_apple_health_data
version = 1.0.0
author = Lauri Soome
author_email = las623@lehigh.edu
description = A Python package for parsing Apple Health Export data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soomelauri/parse_apple_health_data
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.0.0

[options.packages.find]
where = src
